bacvk uo funciuona
back upo funcuiona

--- a/Cafeterias_Landing_public/css/default.css
+++ b/Cafeterias_Landing_public/css/default.css
@@ -1644,6 +1644,15 @@ button:hover { outline:0 !important; }
 
 /**************************************** Perfil user ******************************************/
 
+#personal_form
+{
+    visibility: visible;
+}
+
+#sugerir_form
+{
+    visibility: hidden;
+}
 
 /**************************************** Paginador styles ******************************************/
 
