--- a/Cafeterias_Landing_public/css/default.css
+++ b/Cafeterias_Landing_public/css/default.css
@@ -459,7 +459,7 @@ hr
   top: 10%;
   margin: 0;
   width: 55%;
-  height: 415px;
+  min-height: 430px;
  /* background-color: #000;*/
   background-color: #f2f2f2;
   border-radius: 5px;
@@ -470,7 +470,7 @@ hr
   transition: all .5s ease;
   /*overflow: hidden;*/
 }
-.resetpsswrd{text-align:center; margin-top: 20px; padding-left: 10px;padding-right: 10px;}
+.resetpsswrd{text-align:center; margin-top: 20px; padding-left: 10px;padding-right: 10px; display:block;}
 .resetpsswrd a{ color: #91303a;}
 .main-popup.visible {
   opacity: 1;
@@ -583,14 +583,14 @@ hr
 }
 
 .popup-content {
-  height: 350px;
+  height: 460px;
   overflow: hidden;
 }
 
-form.sign-in {
+form.sign-in {/*
   position: relative; 
   top: 40px;
-  left: 0;
+  left: 0;*/  margin-top: 35px;
   font-size: 1em;
   opacity: 1;
   -webkit-transition: all .35s;
@@ -609,7 +609,7 @@ form label {
   /*color: #fff;*/
   color: #666;
   margin-left: 23px;
-  text-align: center;
+ /* text-align: center;*/  text-align: right;
   display: inline-block;
   width: 32%;
   letter-spacing: 2px;
@@ -660,7 +660,7 @@ input#register-btn {
 
 form.register {
   position: relative; 
-  top: -250px;
+  /*top: -250px;*/  top: -280px;
   left: 0;
   font-size: 1em;
   opacity: 0;
@@ -1102,7 +1102,7 @@ display: unset!important;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: 1.2px;
 }
-
+form #general,form #emailer, form #passwd,form #nombreR,form #generalR,form #emailR, form #passwordR, form #passwordCR{    padding: 0px;    text-align: center;    margin: 10px;    color: #e02c2c;}
 /**************************************** Ver cafetería ******************************************/
 .col2 {width: 16.66666667%;float:left;}
 .col3 {width: 25%;float:left;}
