Nueva imagen - nose se encontraron resultados

--- a/Cafeterias_Landing_public/css/default.css
+++ b/Cafeterias_Landing_public/css/default.css
@@ -1819,8 +1819,8 @@ button:hover { outline:0 !important; }
     background-color: #91303a;
     border-radius: 5px;
 }
-
-
+.imgnotfoundsearch{	position: relative;    top: -43px;
+}
 
 
 /**************************************** fix responsive ******************************************/
