Ajuste responsive img no se encontraron resultados search

--- a/Cafeterias_Landing_public/css/default.css
+++ b/Cafeterias_Landing_public/css/default.css
@@ -1976,7 +1976,7 @@ form.sign-in input, form.register input{ height: 15px;}
     width: 100%; margin-bottom:30px;
 }
 
-
+.imgnotfoundsearch{	width:98%;	margin: auto;}
 
 
 }
